<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/isi_username"
            android:src="@drawable/ic_welcome_logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/white" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="text"
            android:textColorHint="@color/white" />
        <Button
            android:id="@+id/push_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="Or"
            android:textSize="16dip" />

        <Button
            android:id="@+id/connectFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            android:gravity="center"
            android:paddingLeft="45dp"
            android:paddingRight="35dp"
            android:text="@string/connect_with_facebook"
            android:textColor="@color/white"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/regist"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/register_btn"
            android:textColor="@color/white"
            android:textSize="16dip" />

    </LinearLayout>
</LinearLayout>